--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!-- Copyright (c) 2012 The Chromium Authors. All rights reserved.
+
+     Use of this source code is governed by a BSD-style license that can be
+     found in the LICENSE file.
+ -->
+
 <resources>
+    <string name="url_hint">Type URL Here</string>
     <string name="default_encoding">text/plain</string>
 </resources>
